paddings and overflows

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <hr class="dato_booth">
                 <div class="dato">
-                    <h4>Codificación</h4>
+                    <h4>Encoding</h4>
                     <p>UTF-8</p>
                 </div>
             </div>
