--- a/dirs/huascaran_3d/index.html
+++ b/dirs/huascaran_3d/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon">
-    <meta property="og:image" content="./assets/img/NHuascaran3D.png"/>
+    <meta property="og:image" content="https://twitter.com/1nfyT/status/1550956542333272064/photo/1"/>
     <meta property="og:title" content="Nevado Huascarán 3D | LHuatay"/>
     <meta property="og:description" content="Modelo 3D del Nevado Huascarán, Chopicalqui en Huaraz departamento del Perú" />
     <meta property="og:type"               content="article" />
