meta properties fix5

--- a/dirs/huascaran_3d/index.html
+++ b/dirs/huascaran_3d/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon">
+    <meta property="og:url"                content="https://1nfinit0.github.io/peru_limites_departamentales/dirs/huascaran_3d/" />
     <meta property="og:image" content="https://pbs.twimg.com/media/FYYauE4X0AEnoEl?format=jpg&name=large"/>
     <meta property="og:title" content="Nevado Huascarán 3D | LHuatay"/>
     <meta property="og:description" content="Modelo 3D del Nevado Huascarán, Chopicalqui en Huaraz departamento del Perú" />
