--- a/dirs/huascaran_3d/pantallaCompleta.html
+++ b/dirs/huascaran_3d/pantallaCompleta.html
@@ -19,10 +19,14 @@
       width: 100vw;
       height: 100vh;
       background: linear-gradient(216deg, rgba(15,24,99,1) 0%, rgba(48,8,50,1) 49%, rgba(0,0,0,1) 100%);
+      display: flex;
+      flex-direction: column;
     }
     .header {
       width: 100%;
-      height: 80px;
+      height: 10%;
+      min-height: 60px;
+      max-height: 100px;
       background-color: #353535;
       box-shadow: 0px 3px 23px 1px rgba(0,0,0,0.58);
       -webkit-box-shadow: 0px 3px 23px 1px rgba(0,0,0,0.58);
@@ -53,13 +57,13 @@
       margin: auto 10px;
     }
     p {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin-left: 10px;
       margin: auto;
     }
     model-viewer {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 90%;
     }
     .Hotspot {
       color: black;
@@ -89,7 +93,6 @@
       </ul>
     </div>
     <model-viewer class="model" alt="Error" src="src/HUASCARAN_GLB_3D.glb" ar ar-modes="webxr scene-viewer quick-look" environment-image="src/day.hdr" poster="shared-assets/models/NeilArmstrong.webp" seamless-poster shadow-intensity="3" camera-controls enable-pan auto-rotate exposure="1" <button class="Hotspot" slot="hotspot-2" data-position="-8638909.154745484m 7302.759739197364m 1019923.4415223106m" data-normal="-0.12328254810976841m 0.9524661530998915m 0.27858506875038574m" data-visibility-attribute="visible">
-      <div class="HotspotAnnotation">Huascarán Sur</div>
       <button class="Hotspot" slot="hotspot-2" data-position="-8638909.154745484m 7302.759739197364m 1019923.4415223106m" data-normal="-0.12328254810976841m 0.9524661530998915m 0.27858506875038574m" data-visibility-attribute="visible">
         <div class="HotspotAnnotation">Huascarán Sur</div>
     </button><button class="Hotspot" slot="hotspot-3" data-position="-8640549.65238066m 7213.21514825782m 1017647.5064268574m" data-normal="0.4764492048392697m 0.8763673716997933m 0.07054349741843245m" data-visibility-attribute="visible">
