Leyenda para el mapa de radiació uv

--- a/dirs/pronostico_48UV/pronostico_uv_48.html
+++ b/dirs/pronostico_48UV/pronostico_uv_48.html
@@ -114,6 +114,13 @@
                 </div>
                 <hr class="dato_booth">
             </div>
+            <div class="info">
+                <h3>Leyenda</h3>
+                <hr>
+                <div class="leyenda">
+                    <img src="http://idesep.senamhi.gob.pe:80/geoserver/g_03_04/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER=g_03_04:03_04_001_03_001_513_0000_00_00" alt="No disponible">
+                </div>
+            </div>
         </div>
     </main>
     <footer>
