--- a/dirs/pronostico_48UV/pronostico_uv_48.html
+++ b/dirs/pronostico_48UV/pronostico_uv_48.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://1nfinit0.github.io/peru_limites_departamentales/dirs/pronostico_48UV/pronostico_uv_48.html" />
+    <meta property="og:image" content="https://pbs.twimg.com/media/FYZpai3XEAAYJ15?format=png&name=900x900"/>
+    <meta property="og:title" content="Pronóstico de Radiación UV actualizado cada 48 hrs. | LHuatay"/>
+    <meta property="og:description" content="Datos provenientes del Servicio Nacional de Meteorología e Hidrología del Perú" />
+    <meta property="og:type" content="article" />
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js"></script>
