departamentos del peru

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="https://unpkg.com/geojson-vt@3.2.0/geojson-vt.js"></script>
     <script src="./JS/lib/leaflet-geojson-vt.js"></script>
     <script src="./JS/mijs/limites_departamentales.js"></script>
-    <title>Límites departamentales del Perú | Huatay</title>
+    <title>Departamentos del Perú | Huatay</title>
 </head>
 <body>
     <header>
@@ -45,7 +45,7 @@
         <hr>
     </header>
     <main>
-        <h1>Límites Departamentales del Perú</h1>
+        <h1>Departamentos del Perú</h1>
         <div class="map_container">
             <div id="map"></div>
         </div>
