--- a/dirs/provincias_peru/index.html
+++ b/dirs/provincias_peru/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://pbs.twimg.com/media/FYlNPyCWAAEaxyN?format=png"/>
     <meta property="og:url" content="https://1nfinit0.github.io/Huatay" />
-    <meta property="og:image" content="https://pbs.twimg.com/media/FYlNPyCWAAEaxyN?format=png&name=900x900"/>
     <meta property="og:title" content="Provincias del Perú | LHuatay"/>
     <meta property="og:description" content="Datos provenientes del Instituto Nacional de Estadistica e Informatica del Perú" />
     <meta property="og:type" content="article" />
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js"></script>
