--- a/dirs/huascaran_3d/index.html
+++ b/dirs/huascaran_3d/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Meta html default -->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/img/favicon.svg" type="image/x-icon">
+
+    <!-- Meta html facebook -->
+
+
     <meta property="og:url"                content="https://1nfinit0.github.io/peru_limites_departamentales/dirs/huascaran_3d/" />
     <meta property="og:image" content="https://pbs.twimg.com/media/FYYauE4X0AEnoEl?format=jpg&name=large"/>
     <meta property="og:title" content="Nevado Huascarán 3D | LHuatay"/>
     <meta property="og:description" content="Modelo 3D del Nevado Huascarán, Chopicalqui en Huaraz departamento del Perú" />
     <meta property="og:type"               content="article" />
+
+    <!-- LIBS src externos -->
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/geojson-vt@3.2.0/geojson-vt.js"></script>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js"></script>
+    <script src="https://unpkg.com/esri-leaflet-renderers@2.0.6/dist/esri-leaflet-renderers.js"></script>
+    <script src="https://cdn.osmbuildings.org/OSMBuildings-Leaflet.js"></script>
+    <script src="https://use.fontawesome.com/a64989e3a8.js"></script>
+    <script src="https://dayjournal.github.io/Leaflet.Control.Opacity/plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.pm@latest/dist/leaflet.pm.css">
+    <link rel="stylesheet" href="https://dayjournal.github.io/Leaflet.Control.Opacity/plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.css"/>
+    <script src="https://unpkg.com/leaflet.pm@latest/dist/leaflet.pm.min.js"></script>
+
+
+
+    <!-- LIBS src internos -->
+
+    <link rel="stylesheet" href="../../CSS/lib/Control.MiniMap.css">
+    <link rel="stylesheet" href="../../CSS/lib/L.Control.Opacity.css">
+    <link rel="stylesheet" href="../../CSS/lib/leaflet-control-credits.css">
+    <link rel="stylesheet" href="../../CSS/lib/leaflet.groupedlayercontrol.min.css">
+    <link rel="stylesheet" href="../../CSS/micss/style.css">
+
+    <script src="../../JS/lib/Control.MiniMap.min.js"></script>
+    <script src="../../JS/lib/L.Control.Opacity.js"></script>
+    <script src="../../JS/lib/leaflet-control-credits.js"></script>
+    <script src="../../JS/lib/leaflet-geojson-vt.js"></script>
+    <script src="../../JS/lib/leaflet-providers.js"></script>
+    <script src="../../JS/lib/leaflet.groupedlayercontrol.min.js"></script>
+    <script src="../../JS/lib/leaflet.wms.js"></script>
+
+    <!-- Información Particular  -->
+    
     <title>Nevado Huascarán - Huaraz Modelo 3D</title>
 </head>
 <body>
