--- a/dirs/provincias_peru/index.html
+++ b/dirs/provincias_peru/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
+    <!-- Meta html default -->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../assets/img/favicon.svg" type="image/x-icon">
+
+    <!-- Meta html facebook -->
 
     <meta property="og:url"                content="https://1nfinit0.github.io/peru_limites_departamentales/dirs/provincias_peru/" />
     <meta property="og:image" content="https://pbs.twimg.com/media/FYlNPyCWAAEaxyN?format=png"/>
@@ -11,28 +17,43 @@
     <meta property="og:description" content="Datos provenientes del Instituto Nacional de Estadistica e Informatica del Perú" />
     <meta property="og:type"               content="article" />
 
+    <!-- LIBS src externos -->
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/geojson-vt@3.2.0/geojson-vt.js"></script>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet@2.1.3/dist/esri-leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet-renderers@2.0.6/dist/esri-leaflet-renderers.js"></script>
-    <script src="JS/lib/leaflet-providers.js"></script>
     <script src="https://cdn.osmbuildings.org/OSMBuildings-Leaflet.js"></script>
     <script src="https://use.fontawesome.com/a64989e3a8.js"></script>
-    <link rel="stylesheet" href="CSS/lib/leaflet.groupedlayercontrol.min.css">
-    <script src="JS/lib/leaflet.groupedlayercontrol.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="CSS/lib/Control.MiniMap.css">
-    <script src="JS/lib/Control.MiniMap.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.pm@latest/dist/leaflet.pm.css">
-    <script src="https://unpkg.com/leaflet.pm@latest/dist/leaflet.pm.min.js"></script>
-    <script src="JS/lib/leaflet.wms.js"></script>
     <script src="https://dayjournal.github.io/Leaflet.Control.Opacity/plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.pm@latest/dist/leaflet.pm.css">
     <link rel="stylesheet" href="https://dayjournal.github.io/Leaflet.Control.Opacity/plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.css"/>
-    <link rel="stylesheet" href="CSS/micss/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
-    <script src="https://unpkg.com/geojson-vt@3.2.0/geojson-vt.js"></script>
-    <script src="./JS/lib/leaflet-geojson-vt.js"></script>
-    <script src="./JS/mijs/peru_provincias.js"></script>
+    <script src="https://unpkg.com/leaflet.pm@latest/dist/leaflet.pm.min.js"></script>
+
+    <!-- LIBS src internos -->
+
+    <link rel="stylesheet" href="../../CSS/lib/Control.MiniMap.css">
+    <link rel="stylesheet" href="../../CSS/lib/L.Control.Opacity.css">
+    <link rel="stylesheet" href="../../CSS/lib/leaflet-control-credits.css">
+    <link rel="stylesheet" href="../../CSS/lib/leaflet.groupedlayercontrol.min.css">
+    <link rel="stylesheet" href="../../CSS/micss/style.css">
+
+    <script src="../../JS/lib/Control.MiniMap.min.js"></script>
+    <script src="../../JS/lib/L.Control.Opacity.js"></script>
+    <script src="../../JS/lib/leaflet-control-credits.js"></script>
+    <script src="../../JS/lib/leaflet-geojson-vt.js"></script>
+    <script src="../../JS/lib/leaflet-providers.js"></script>
+    <script src="../../JS/lib/leaflet.groupedlayercontrol.min.js"></script>
+    <script src="../../JS/lib/leaflet.wms.js"></script>
+
+    <!-- Geojson (Si es que se requiere) -->
+    
+    <script src="./JS/peru_provincias.js"></script>
+
+    <!-- Información Particular  -->
+
     <title>Provincias del Perú | Huatay</title>
 </head>
 <body>
@@ -40,7 +61,7 @@
         <div class="container_header">
             <a href="https://1nfinit0.github.io/Huatay/" class="left">
                 <div class="logo">
-                    <img src="./assets/img/favicon.svg" alt="Huatay">
+                    <img src="../../assets/img/favicon.svg" alt="Huatay">
                     <p>Lhuatay</p>
                 </div>
             </a>
@@ -119,7 +140,7 @@
         </div>
     </main>
     <footer>
-        <img src="./assets/img/foto_personal.jpg" alt="perfil">
+        <img src="../../assets/img/foto_personal.jpg" alt="perfil">
         <h2>Luis E. Huatay S.</h2>
         <div class="costado">
             <span>
@@ -127,16 +148,16 @@
             <h4>T. Geomático</h4>
         </div>
         <div class="redes">
-            <a href="https://www.youtube.com/channel/UCPO_W-iDJmM77phTZYp_aWQ"><img src="./assets/img/yt.svg" alt="Youtube"></a>
-            <a href="https://wa.link/pvdrx9"><img src="./assets/img/whats.svg" alt="WhatssApp"></a>
-            <a href="https://github.com/1nfinit0"><img src="./assets/img/github.svg" alt="Github"></a>
-            <a href="https://twitter.com/1nfyT"><img src="./assets/img/twitter-svgrepo-com.svg" alt="Twitter"></a>
-            <a href="https://www.linkedin.com/in/luishuatay/"><img src="./assets/img/linkedin-svgrepo-com.svg" alt="Linkedin"></a>
+            <a href="https://www.youtube.com/channel/UCPO_W-iDJmM77phTZYp_aWQ"><img src="../../assets/img/yt.svg" alt="Youtube"></a>
+            <a href="https://wa.link/pvdrx9"><img src="../../assets/img/whats.svg" alt="WhatssApp"></a>
+            <a href="https://github.com/1nfinit0"><img src="../../assets/img/github.svg" alt="Github"></a>
+            <a href="https://twitter.com/1nfyT"><img src="../../assets/img/twitter-svgrepo-com.svg" alt="Twitter"></a>
+            <a href="https://www.linkedin.com/in/luishuatay/"><img src="../../assets/img/linkedin-svgrepo-com.svg" alt="Linkedin"></a>
         </div>
         <hr>
         <p>(CC) Luis Huatay. 2024</p>
         <p>Biblioteca geográfica de proyectos personales, insumos geográficos, mapas temáticos, datos espaciales, notas expositivas, ideas en general.</p>
     </footer>
-    <script src="JS/mijs/main.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 </html>
