huascaran images fixed

--- a/dirs/huascaran_3d/index.html
+++ b/dirs/huascaran_3d/index.html
@@ -60,7 +60,7 @@
         <div class="container_header">
             <a href="https://1nfinit0.github.io/Huatay/" class="left">
                 <div class="logo">
-                    <img src="./assets/img/favicon.svg" alt="Huatay">
+                    <img src="../../assets/img/favicon.svg" alt="Huatay">
                     <p>Lhuatay</p>
                 </div>
             </a>
@@ -123,7 +123,7 @@
         </div>
     </main>
     <footer>
-        <img src="./assets/img/foto_personal.jpg" alt="perfil">
+        <img src="../../assets/img/foto_personal.jpg" alt="perfil">
         <h2>Luis E. Huatay S.</h2>
         <div class="costado">
             <span>
@@ -131,11 +131,11 @@
             <h4>T. Geomático</h4>
         </div>
         <div class="redes">
-            <a href="https://www.youtube.com/channel/UCPO_W-iDJmM77phTZYp_aWQ"><img src="./assets/img/yt.svg" alt="Youtube"></a>
-            <a href="https://wa.link/pvdrx9"><img src="./assets/img/whats.svg" alt="WhatssApp"></a>
-            <a href="https://github.com/1nfinit0"><img src="./assets/img/github.svg" alt="Github"></a>
-            <a href="https://twitter.com/1nfyT"><img src="./assets/img/twitter-svgrepo-com.svg" alt="Twitter"></a>
-            <a href="https://www.linkedin.com/in/luishuatay/"><img src="./assets/img/linkedin-svgrepo-com.svg" alt="Linkedin"></a>
+            <a href="https://www.youtube.com/channel/UCPO_W-iDJmM77phTZYp_aWQ"><img src="../../assets/img/yt.svg" alt="Youtube"></a>
+            <a href="https://wa.link/pvdrx9"><img src="../../assets/img/whats.svg" alt="WhatssApp"></a>
+            <a href="https://github.com/1nfinit0"><img src="../../assets/img/github.svg" alt="Github"></a>
+            <a href="https://twitter.com/1nfyT"><img src="../../assets/img/twitter-svgrepo-com.svg" alt="Twitter"></a>
+            <a href="https://www.linkedin.com/in/luishuatay/"><img src="../../assets/img/linkedin-svgrepo-com.svg" alt="Linkedin"></a>
         </div>
         <hr>
         <p>(CC) Luis Huatay. 2024</p>
