favicon on huascaran FIXED

--- a/dirs/cuencas_hidrograficas_peru/index.html
+++ b/dirs/cuencas_hidrograficas_peru/index.html
@@ -54,7 +54,7 @@
 
     <!-- Información Particular  -->
 
-    <title>Cuencas Hidrográficas del Perú | Huatay</title>
+    <title>Cuencas Hidrográficas del Perú | LHuatay</title>
 </head>
 <body>
     <header>
