--- a/dirs/huascaran_3d/pantallaCompleta.html
+++ b/dirs/huascaran_3d/pantallaCompleta.html
@@ -79,7 +79,7 @@
       <ul>
         <li>
           <a href="https://1nfinit0.github.io/Huatay/">
-            <img src="./assets/img/favicon.svg" alt="Huatay">
+            <img src="../../assets/img/favicon.svg" alt="Huatay">
             <p>LHuatay</p>
           </a>
         </li>
