--- a/dirs/codigo_ubigeo_nacional/index.html
+++ b/dirs/codigo_ubigeo_nacional/index.html
@@ -12,7 +12,7 @@
     <!-- Meta html facebook -->
 
     <meta property="og:url"                content="https://1nfinit0.github.io/peru_limites_departamentales/dirs/codigo_ubigeo_nacional/" />
-    <meta property="og:image" content="https://pbs.twimg.com/media/FYvXLtvXkAAb7nB?format=png&name=small"/>
+    <meta property="og:image" content="https://pbs.twimg.com/media/FY_BmszXkAImNDi?format=jpg&name=large"/>
     <meta property="og:title" content="Códigos de ubigeo nacional | LHuatay"/>
     <meta property="og:description" content="Información proveniente del Ministerio de Transporte y Comunicaciones del Perú." />
     <meta property="og:type"               content="article" />
@@ -83,14 +83,24 @@
                 <h3>Descarga</h3>
                 <hr>
                 <div class="formatos">
-                    <a href="https://github.com/1nfinit0/mindAR-prueba/raw/master/downloader/distritos_totales_peru/distritos_totales_peru_shp.zip" download>
+                    <a href="https://github.com/1nfinit0/mindAR-prueba/raw/master/downloader/ubigeo_peru/codigo_ubigeo_nacional_SHP.zip" download>
                         <div class='shp'>
                             <p>SHP</p>
                         </div>
                     </a>
-                    <a href="https://github.com/1nfinit0/mindAR-prueba/raw/master/downloader/distritos_totales_peru/distritos_totales_peru_GML.zip" download>
+                    <a href="https://github.com/1nfinit0/mindAR-prueba/raw/master/downloader/ubigeo_peru/codigo_ubigeo_nacional_GML.zip" download>
                         <div class='gml'>
                             <p>GML</p>
+                        </div>
+                    </a>
+                    <a href="https://github.com/1nfinit0/mindAR-prueba/raw/master/downloader/ubigeo_peru/codigo_ubigeo_nacional_SQL.zip" download>
+                        <div class='bd'>
+                            <p>PL/PgSQL</p>
+                        </div>
+                    </a>
+                    <a href="https://github.com/1nfinit0/mindAR-prueba/raw/master/downloader/ubigeo_peru/codigo_ubigeo_nacional_geojson.zip" download>
+                        <div class='geojson'>
+                            <p>GeoJson</p>
                         </div>
                     </a>
                 </div>
