lower case fixed

--- a/dirs/codigo_ubigeo_nacional/index.html
+++ b/dirs/codigo_ubigeo_nacional/index.html
@@ -13,7 +13,7 @@
 
     <meta property="og:url"                content="https://1nfinit0.github.io/peru_limites_departamentales/dirs/codigo_ubigeo_nacional/" />
     <meta property="og:image" content="https://pbs.twimg.com/media/FY_BmszXkAImNDi?format=jpg&name=large"/>
-    <meta property="og:title" content="Códigos de ubigeo nacional | LHuatay"/>
+    <meta property="og:title" content="Códigos de Ubigeo Nacional | LHuatay"/>
     <meta property="og:description" content="Información proveniente del Ministerio de Transporte y Comunicaciones del Perú." />
     <meta property="og:type"               content="article" />
 
